Swap to more generic channel name generation